[gd_scene load_steps=33 format=2]

[ext_resource path="res://actors/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/animations/protagonist/spritemap.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/protagonist/idle1a.png" type="Texture" id=17]
[ext_resource path="res://actors/player/animation.gd" type="Script" id=18]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 320, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "attack",
"speed": 20.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 21.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 10.8596, 10.5375 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 21.5976, 23.0488 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 0.640276, 1.60738 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 14.3068, 19.3994 )

[sub_resource type="Animation" id=26]
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "dashanim"
} ]
}

[sub_resource type="Animation" id=27]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyDetector/SwordHitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 11.2098, -15.2527 ), Vector2( -17.5422, -35.9958 ), Vector2( -35.1985, -23.4521 ), Vector2( -34.0094, -9.6581 ), Vector2( -19.5851, 4.76619 ), Vector2( 3.16089, -3.27812 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackend"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyDetector/SwordHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=28]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyDetector/SwordHitbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15.6966, -35.5813 ), Vector2( 24.0624, -36.133 ), Vector2( 35.3758, -23.7675 ), Vector2( 33.6519, -10.8472 ), Vector2( 18.9502, 4.40926 ), Vector2( -3.24099, -2.80289 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attackend"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyDetector/SwordHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 1 )
speed = Vector2( 300, 750 )
gravity = 2000.0
stomp_impulse = 500.0

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "walk"
frame = 10
playing = true
script = ExtResource( 18 )

[node name="EnemyDetector" type="Area2D" parent="."]
monitoring = false
collision_layer = 32
collision_mask = 0

[node name="SwordHitbox" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.160784, 0.12549, 0.721569, 1 )
position = Vector2( -3.24099, -2.80289 )
shape = SubResource( 22 )
disabled = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
modulate = Color( 0.945098, 1, 0, 1 )
position = Vector2( 2.59882, 8.92336 )
shape = SubResource( 23 )

[node name="Player Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 2112
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="diebox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="pitbox" type="CollisionShape2D" parent="diebox"]
position = Vector2( -7.90756, -26.0359 )
shape = SubResource( 24 )

[node name="Hurtbox" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="HurtHitbox" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 3.56812, 10.2805 )
shape = SubResource( 25 )

[node name="AnimationTimer" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 26 )
anims/Flipped = SubResource( 27 )
anims/Hitbox = SubResource( 28 )

[node name="Dtimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="diebox" to="." method="_on_diebox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_enemy_collided"]
[connection signal="timeout" from="Dtimer" to="." method="_on_Dtimer_timeout"]
